--- a/.github/workflows/flake.yaml
+++ b/.github/workflows/flake.yaml
@@ -18,9 +18,10 @@ jobs:
           - neovim
     runs-on: ${{ matrix.os }}
     steps:
+      - uses: cachix/install-nix-action@v27
+        with:
+          nix_path: nixpkgs=channel:nixos-unstable
       - uses: actions/checkout@v4
-      - uses: DeterminateSystems/nix-installer-action@main
-      - uses: DeterminateSystems/magic-nix-cache-action@main
       - run: nix develop -c just check
 
   package:
@@ -37,7 +38,8 @@ jobs:
     runs-on: ${{ matrix.os }}
     steps:
 
+      - uses: cachix/install-nix-action@v27
+        with:
+          nix_path: nixpkgs=channel:nixos-unstable
       - uses: actions/checkout@v4
-      - uses: DeterminateSystems/nix-installer-action@main
-      - uses: DeterminateSystems/magic-nix-cache-action@main
       - run: nix develop -c just package "${{ matrix.profile }}"
